fix typo, use newer API